--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 openai = "^1.40.1"
 pandas = "^2.2.2"
 python-docx = "^1.1.2"
+pydantic = "^2.8.2"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
